# MyCppCollections

./: .gitignore  CMakeLists.txt  README.md
Announcer/: Announcer.hpp  README.md
IO_File/: Attribute_Hierarchy_Manager.cpp  Attribute_Hierarchy_Manager.hpp  Attribute_Manager.hpp  Attribute_Manager_Interface.hpp  Attributes_Manager.hpp  Globals.hpp  IO_File.cpp  IO_File.hpp  IO_Node.cpp  IO_Node.hpp  README.md
Stopwatch/: README.md  Stopwatch.cpp  Stopwatch.hpp
Tests/: AnnouncerTest.cpp  IO_FileTest.cpp  StopwatchTest.cpp
